--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
 }
 
 .container {
-  max-width: 500px;
+  max-width: 700px;
   margin: 30px auto;
   overflow: auto;
   min-height: 300px;
@@ -46,6 +46,7 @@
 }
 
 .form-control label {
+  color: brown;
   margin: auto;
   font-size: 20px;
   display: block;
